# cookiecutter-fastapi-clean-arch

./: .cookiecutterignore  COMPLETION_CHECKLIST.md  README.md  TEMPLATE_SUMMARY.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
{{cookiecutter.project_slug}}/app/api/: dependencies.py  error_handlers.py  router.py
{{cookiecutter.project_slug}}/app/api/v1/endpoints/: __init__.py  entities.py  products.py
{{cookiecutter.project_slug}}/app/core/: config.py  container.py  logging.py
{{cookiecutter.project_slug}}/app/domain/: errors.py  models.py  protocols.py
{{cookiecutter.project_slug}}/app/repositories/: memory_repository.py
{{cookiecutter.project_slug}}/app/schemas/: entity.py  product.py
{{cookiecutter.project_slug}}/app/services/: entity_service.py  product_service.py
{{cookiecutter.project_slug}}/tests/integration/: conftest.py  test_entity_flow.py  test_product_flow.py
{{cookiecutter.project_slug}}/tests/unit/: conftest.py
{{cookiecutter.project_slug}}/tests/unit/api/: test_entity_endpoint.py  test_product_endpoint.py  test_router.py
{{cookiecutter.project_slug}}/tests/unit/domain/: test_entity.py  test_product.py
{{cookiecutter.project_slug}}/tests/unit/repositories/: test_memory_repository.py
{{cookiecutter.project_slug}}/tests/unit/services/: test_entity_service.py  test_product_service.py
